成果列表展示

--- a/school/activityList.html
+++ b/school/activityList.html
@@ -164,7 +164,7 @@
 						for (var i = 0; i < objectList.length; i++) {
 							li = document.createElement('li');
 							li.className = 'mui-table-view-cell';
-							var insertHtml=""
+							var insertHtml="";
 							if(index==0){ //我的课程
 								insertHtml+="<div class=\"show-desc\">";
 								insertHtml+="	<div class=\"show-desc-right\">";
