调整css、登陆验证等

--- a/school/courseAll.html
+++ b/school/courseAll.html
@@ -65,8 +65,7 @@
 												<p href="#"  class="content1">“国际理解教育”</p>
 												<p class="content2">校本课程教材 试用本</p>
 											</a>
-										</div>
-									</li>
+										</div></li>
 									<li class="mui-table-view-cell">
 										<div class="myh5_card">
 											<a href="#" class="top sc_cyan">
@@ -75,8 +74,7 @@
 												<p class="content1">班级：三 1 班</p>
 												<p class="content2">时间：周一</p>
 											</a>
-										</div>
-									</li>
+										</div></li>
 									<li class="mui-table-view-cell">
 										<div class="myh5_card">
 											<a href="#" class="top sc_orange">
@@ -85,8 +83,7 @@
 												<p class="content1">班级：三 1 班</p>
 												<p class="content2">时间：周一</p>
 											</a>
-										</div>
-									</li>
+										</div></li>
 								</ul>
 							</div>
 						</div>
