--- a/school/activityDetails.html
+++ b/school/activityDetails.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title>活动详情</title>
     <script src="../js/mui.min.js"></script>
+	<script src="../js/app.js"></script>
+	<script src="../js/vue.min.js"></script>
     <link href="../css/mui.css" rel="stylesheet"/>
 	<link href="../css/icons-extra.css" rel="stylesheet"/>
 	<link href="../css/app.css" rel="stylesheet"/>
@@ -21,28 +23,26 @@
 		<a class="mui-pull-right top-edit"> 交流区 </a>
 	</header>
 
-	<nav class="mui-bar mui-bar-tab">
-		<a class="mui-tab-item" href="#tabbar">
+	<nav id="main_bar" class="mui-bar mui-bar-tab">
+		<a class="mui-tab-item" href="courseAll.html">
 			<span class="mui-icon tabbar-ns-1 foot-icon"></span>
 			<span class="mui-tab-label">课程</span>
 		</a>
-		<a class="mui-tab-item  mui-active" href="#tabbar-with-chat">
+		<a class="mui-tab-item mui-active" href="activityList.html">
 			<span class="mui-icon tabbar-ns-2 foot-icon"></span>
 			<span class="mui-tab-label">活动</span>
 		</a>
-		<a class="mui-tab-item " href="#tabbar-with-contact">
+		<a class="mui-tab-item" href="scShowAll.html">
 			<span class="mui-icon tabbar-ns-3 foot-icon"></span>
 			<span class="mui-tab-label">成果</span>
 		</a>
-		<a class="mui-tab-item " href="#tabbar-with-map">
+		<a class="mui-tab-item " href="personalCenter.html">
 			<span class="mui-icon tabbar-ns-4 foot-icon"></span>
 			<span class="mui-tab-label">我的</span>
 		</a>
 	</nav>
-
-
-
-
+	 
+ 
 	<div class="mui-content">
 
 		<div class="show-desc">
@@ -96,6 +96,54 @@
 	
 <script type="text/javascript" charset="UTF-8">
   	mui.init();
+  	var vm = new Vue({
+		el: '.mui-content',
+		data: {
+			courseInfo:{ 
+		    }
+			,classList:[ ]
+				
+		} 
+	});
+	
+	
+	document.addEventListener('get_activity_detail', function(event) {
+		activityId = event.detail.activityId;
+		if(!activityId) {
+			return;
+		} 
+		console.info("activityId:  "+activityId);
+		app.getActivityDetail(activityId,function(data){
+			if(data.code==0){
+				vm.courseInfo=data.object; 
+				//vm.classList =  data.objectList;
+			}
+			mui.toast(data.msg);
+		});
+			 
+	});
+
+	//重写返回逻辑
+	mui.back = function() {
+		plus.webview.currentWebview().hide("auto", 300);
+	}
+	
+	//窗口隐藏时，重置页面数据
+	mui.plusReady(function () {
+		var self = plus.webview.currentWebview();
+		self.addEventListener("hide",function (e) {
+			window.scrollTo(0, 0);
+			//vm.resetData();
+		},false);
+		 
+		 
+	    mui('#main_bar').on('tap', 'a', function(e) {
+		    //获取目标子页的id
+		    var targetTab = this.getAttribute('href');
+		    window.location.href=targetTab;
+		});
+	})
+	
 </script>
 </body>
 </html>
