--- a/school/teacherCenter.html
+++ b/school/teacherCenter.html
@@ -47,16 +47,14 @@
 
 		<div class="myh5_card">
 			<a href="#" class="top psct_purple">
-				<img src="../images/school/btm-round.png" class="photo">
-				<img src="../images/school/honor-icon.png" class="photo1" />
+				<img src="../images/school/tc_02.png" class="photo1" />
 				<p class="title">学生点赞数排行榜</p>
 			</a>
 		</div>
 
 		<div class="myh5_card">
 			<a href="#" class="top psct_purple">
-				<img src="../images/school/btm-round.png" class="photo">
-				<img src="../images/school/honor-icon.png" class="photo1" />
+				<img src="../images/school/tc_01.png" class="photo1" />
 				<p class="title">活动点赞数排行榜</p>
 			</a>
 		</div>
