--- a/school/activityDetails.html
+++ b/school/activityDetails.html
@@ -16,11 +16,14 @@
 	<link href="../css/school/activityDetails.css" rel="stylesheet"/>
 </head>
 <body>
+	<div id="actiity-detail-content">
+		
 	<header class="mui-bar mui-bar-nav">
 		<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		<img src="../images/head-dz.png" class="head-dz"/>
 		<h1 class="mui-title">活动详情</h1>
-		<a class="mui-pull-right top-edit"> 交流区 </a>
+		<a id="activity_every_one_work" class="mui-pull-right top-edit">大家作品</a>
+		<a id="activity_reply_detail" href="#"  class="mui-pull-right top-edit" style="left:50px; right:250px">活动集锦</a>
 	</header>
 
 	<nav id="main_bar" class="mui-bar mui-bar-tab">
@@ -51,10 +54,10 @@
 				<p style="font-size: 12px !important;">剩余名额2人</p>
 			</div>
 			<div class="show-desc-left">
-				<p class="show-desc-title">欢乐中国豫园行</p>
-				<p class="show-desc-content">发布人：赵先生</p>
-				<p class="show-desc-content">参与人：赵先生</p>
-				<p class="show-desc-content">发布日期：2017-07-25</p>
+				<p class="show-desc-title">{{courseInfo.actName}}</p>
+				<p class="show-desc-content">发布人：{{courseInfo.actOperName}}</p>
+				<p class="show-desc-content">参与人：{{courseInfo.actParticipant}}</p>
+				<p class="show-desc-content">发布日期：{{courseInfo.actTime}}</p>
 			</div>
 
 		</div>
@@ -63,14 +66,13 @@
 			<div class="show-desc-top">
 				活动内容
 			</div>
-			<p  class="content">豫园在上海城隍庙北区内，门面并不张扬，但内涵十分丰富可看，可以说是好酒不怕巷深。它素有“城市山林”之誉，又有“奇秀甲于东南”之说有着400多年的历史。取名中的“豫”有“平安”、“安泰”之意。
+			<p  class="content">
+				{{courseInfo.actDesc}}
+			</p>
 
-				到豫园内有三大看点，一是水榭楼台园林建筑，二是石雕、泥塑、木刻等艺术品，三是顺道逛逛旁边的即老城隍庙商场。在这里，游客还可以品尝到各类上海本地及全国各地的风味小吃，如蟹粉小笼，老虎爪等，都是纯正的海派特色。</p>
 
-
-			<img src="../images/bigicon3.png" class="desc-pic"/>
-			<img src="../images/bigicon3.png" class="desc-pic"/>
-			<img src="../images/bigicon3.png" class="desc-pic"/>
+			<img :src="courseInfo.actFiles" class="desc-pic"/>
+			<img src="../images/bigicon3.png" class="desc-pic"/> 
 		</div>
 
 
@@ -78,16 +80,11 @@
 			<div class="show-desc-top">
 				老师寄语
 			</div>
-			<p  class="content">各类上海本地及全国各地的风味小吃，如蟹粉小笼，老虎爪等，都是纯正的海派特色。</p>
+			<p  class="content">{{courseInfo.actSendWord}}</p>
 
 		</div>
-
-
-
-
 	</div>
-
-
+</div>
 
 
 
@@ -96,8 +93,10 @@
 	
 <script type="text/javascript" charset="UTF-8">
   	mui.init();
+  	var webview_every_one_works = null // 大家作品
+  	var webview_activity_reply_detail = null // 活动集锦
   	var vm = new Vue({
-		el: '.mui-content',
+		el: '#actiity-detail-content',
 		data: {
 			courseInfo:{ 
 		    }
@@ -142,7 +141,66 @@
 		    var targetTab = this.getAttribute('href');
 		    window.location.href=targetTab;
 		});
+		
+		webview_every_one_works = mui.preload({
+			url: 'everyoneWorks.html',
+			id: 'everyone_works',
+			styles: {
+				"render": "always",
+				"popGesture": "hide",
+				"bounce": "vertical" 
+			}
+		});
+		
+		webview_activity_reply_detail = mui.preload({
+			url: 'activityReply.html',
+			id: 'activity_reply',
+			styles: {
+				"render": "always",
+				"popGesture": "hide",
+				"bounce": "vertical" 
+			}
+		});
+		
+		
+		
+		mui('#actiity-detail-content').on('tap','#activity_every_one_work',function(){
+			//console.info("this.href:  " + this.href);
+			 open_every_one_works();
+		}); 
+		mui('#actiity-detail-content').on('tap','#activity_reply_detail',function(){
+			//console.info("this.href:  " + this.href);
+			 open_activity_reply_detail();
+		}); 
 	})
+	
+	/**
+	 * 打开活动集锦
+	 */
+	function open_activity_reply_detail() {			
+		//触发子窗口变更详情
+		mui.fire(webview_activity_reply_detail, 'get_activity_reply_detail', {
+				//activityId: id
+			});
+ 
+			setTimeout(function () {
+				webview_activity_reply_detail.show("slide-in-right", 300);
+		},150);
+	}
+	
+	/**
+	 * 打开活动集锦
+	 */
+	function open_every_one_works() {			
+		//触发子窗口变更详情
+		mui.fire(webview_every_one_works, 'get_every_one_works', {
+				//activityId: id
+			});
+ 
+			setTimeout(function () {
+				webview_every_one_works.show("slide-in-right", 300);
+		},150);
+	}
 	
 </script>
 </body>
