--- a/school/addActivity.html
+++ b/school/addActivity.html
@@ -6,6 +6,8 @@
     <title>新活动申请</title>
     <script src="../js/jquery-2.1.4.min.js"></script>
     <script src="../js/mui.min.js"></script>
+	<script src="../js/app.js"></script>
+	<script src="../js/vue.min.js"></script>
     <link href="../css/mui.css" rel="stylesheet"/>
 	<link href="../css/app.css" rel="stylesheet"/>
     <link rel="stylesheet" href="../css/mui.picker.min.css" />
@@ -72,6 +74,7 @@
 <script type="text/javascript" src="../js/mui.picker.js" ></script>
 <script type="text/javascript" src="../js/mui.poppicker.js" ></script>
 <script type="text/javascript" charset="UTF-8">
+    mui.init();
     var count = 0
     $(".buttonContianer").on('tap',function(){
         count ++
@@ -87,6 +90,51 @@
             })
         }
     })
+    
+    var vm = new Vue({
+		el: '.mui-content',
+		data: {			 	
+		} 
+	});
+	
+	
+	document.addEventListener('get_activity_add_detail', function(event) {
+		activityId = event.detail.activityId;
+//		if(!activityId) {
+//			return;
+//		} 
+//		console.info("activityId:  "+activityId);
+//		app.getActivityDetail(activityId,function(data){
+//			if(data.code==0){
+//				vm.courseInfo=data.object; 
+//				//vm.classList =  data.objectList;
+//			}
+//			mui.toast(data.msg);
+//		});
+//			 
+	});
+
+	//重写返回逻辑
+	mui.back = function() {
+		plus.webview.currentWebview().hide("auto", 300);
+	}
+	
+	//窗口隐藏时，重置页面数据
+	mui.plusReady(function () {
+		var self = plus.webview.currentWebview();
+		self.addEventListener("hide",function (e) {
+			window.scrollTo(0, 0);
+			//vm.resetData();
+		},false);
+		 
+		 
+	    mui('#main_bar').on('tap', 'a', function(e) {
+		    //获取目标子页的id
+		    var targetTab = this.getAttribute('href');
+		    window.location.href=targetTab;
+		});
+	})
+	
 </script>
 </body>
 </html>
