--- a/school/courseDetails.html
+++ b/school/courseDetails.html
@@ -32,8 +32,8 @@
 		<ul id="list" class="course-detail-ui" >
 			<li v-for="item in courseDetails">
 				<div class="content-div">
-					<div class="content-title">1、生活照赏析</div>
-					<img class="content-img" src="{{item.chapFile}}"> 
+					<div class="content-title">{{item.chapClassName}}</div>
+					<img class="content-img" v-bind:src="item.chapFile"> 
 					<p class="content-desc">{{item.chapDesc}}</p> 
 				</div>
 			</li>
@@ -66,6 +66,7 @@
 	document.addEventListener('get_course_detail', function(event) {
 		courseId = event.detail.courseId;
 		chapId = event.detail.chapId;
+		classId = event.detail.classId;
 		if(!courseId || !chapId) {
 			return;
 		}
@@ -77,7 +78,7 @@
 		vm.title= event.detail.title;
 		//向服务端请求文章详情内容
 		console.info("courseId:  "+courseId);
-		app.getCourseDetail(chapId,courseId,function(data){
+		app.getCourseDetail(chapId,courseId,classId,function(data){
 			console.log(data.code);
 			console.log(data.msg);
 			if(data.code==0){ 
