--- a/school/courseDir.html
+++ b/school/courseDir.html
@@ -32,8 +32,10 @@
 		<ul id="list" class="course-dir-ui" >
 			<li v-for="item in courseDirList">
 				<div class="myh5_card">
+					<a href="javascript:;" :data-guid="citem.id"  @tap="open_course_detail(citem,citem)">
 					<div class="course-title-icon"></div>
 					<div class="course-title">{{item.text}}</div>
+					</a>
 					<ul id="clist" class="course-dir-ui" >
 						<li v-for="citem in item.children" >
 							<a href="javascript:;" :data-guid="citem.id"  @tap="open_course_detail(citem,item)">
@@ -70,6 +72,7 @@
   	mui.init();
   	var dirList= new Array();
   	var courseId=0; //课程ID
+  	var classId=0; //授课班级ID
   	var currentDetailTitle = "";
 	var webview_course_detail = null; //详情页webview
   	
@@ -93,6 +96,7 @@
 	//监听自定义事件，获取新闻详情
 	document.addEventListener('get_course_dir_detail', function(event) {
 		courseId = event.detail.courseId;
+		classId = event.detail.classId;
 		if(!courseId) {
 			return;
 		}
@@ -104,25 +108,26 @@
 //		vm.time = event.detail.time;
 		//向服务端请求文章详情内容
 		console.info("courseId:  "+courseId);
+		console.info("classId:  "+classId);
 		app.getCourseDir(courseId,0,function(data){
 			if(data.code==0){
  
-				console.log(data.objectList.length);
-				for(var i=0;i<data.objectList.length;i++){
-					(function(i){
-						//console.log(data.objectList[i].id);
-						app.getCourseDir(courseId,data.objectList[i].id,function(data){
-							//console.log(data.code);
-							//console.log(data.msg);
-							if(data.code==0){
-								data.objectList[i].childList=data.objectList;
-								//console.log(data.objectList[i].childList[0].text);
-							}
-						});
-					}(i));
-				}
+//				console.log(data.objectList.length);
+//				for(var i=0;i<data.objectList.length;i++){
+//					(function(i){
+//						//console.log(data.objectList[i].id);
+//						app.getCourseDir(courseId,data.objectList[i].id,function(data){
+//							//console.log(data.code);
+//							//console.log(data.msg);
+//							if(data.code==0){
+//								data.objectList[i].childList=data.objectList;
+//								//console.log(data.objectList[i].childList[0].text);
+//							}
+//						});
+//					}(i));
+//				}
 				 
-				vm.courseDirList = // data.objectList;
+				vm.courseDirList = // data.objectList; // 目前没数据先模拟数据。
 				[{
 		            "id": "1",
 		            "text": "第一章、摄影赏析",
@@ -214,13 +219,14 @@
 	 */
 	function open_course_detail(citem,pitem) {
 		
-			console.log(citem.id);
+			console.log(pitem.id);
 			console.log(citem.text);
 			//触发子窗口变更新闻详情
 		mui.fire(webview_course_detail, 'get_course_detail', {
-				chapId: citem.id,
+				chapId: pitem.id,
 				courseId:courseId,
-				title:pitem.text
+				title:pitem.text,
+				classId:classId
 			});
  
 			setTimeout(function () {
