--- a/school/everyoneWorks.html
+++ b/school/everyoneWorks.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <title>大家作品</title>
     <script src="../js/mui.min.js"></script>
+	<script src="../js/app.js"></script>
+	<script src="../js/vue.min.js"></script>
     <link href="../css/mui.css" rel="stylesheet"/>
 	<link href="../css/icons-extra.css" rel="stylesheet"/>
 	<link href="../css/app.css" rel="stylesheet"/>
@@ -99,6 +101,51 @@
 	
 <script type="text/javascript" charset="UTF-8">
   	mui.init();
+  	
+  	var vm = new Vue({
+		el: '.mui-content',
+		data: {			 	
+		} 
+	});
+	
+	
+	document.addEventListener('get_every_one_works', function(event) {
+		activityId = event.detail.activityId;
+//		if(!activityId) {
+//			return;
+//		} 
+//		console.info("activityId:  "+activityId);
+//		app.getActivityDetail(activityId,function(data){
+//			if(data.code==0){
+//				vm.courseInfo=data.object; 
+//				//vm.classList =  data.objectList;
+//			}
+//			mui.toast(data.msg);
+//		});
+//			 
+	});
+
+	//重写返回逻辑
+	mui.back = function() {
+		plus.webview.currentWebview().hide("auto", 300);
+	}
+	
+	//窗口隐藏时，重置页面数据
+	mui.plusReady(function () {
+		var self = plus.webview.currentWebview();
+		self.addEventListener("hide",function (e) {
+			window.scrollTo(0, 0);
+			//vm.resetData();
+		},false);
+		 
+		 
+	    mui('#main_bar').on('tap', 'a', function(e) {
+		    //获取目标子页的id
+		    var targetTab = this.getAttribute('href');
+		    window.location.href=targetTab;
+		});
+	})
+	
 </script>
 </body>
 </html>
