--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
 			<div class="mui-input-group">
 				<div class="mui-input-row" id="account-wrapper">
 					<span class="mui-icon mui-icon-locked"></span>
-					<input type="text" id="account" placeholder="请输入用户帐号" />
+					<input type="text" id="loginName" placeholder="请输入用户帐号" />
 				</div>
 				<div class="mui-input-row">
 					<span class="mui-icon-extra mui-icon-extra-people"></span>
@@ -66,14 +66,14 @@
 			mui.init({
 				swipeBack: true //启用右滑关闭功能
 			});
-			var accountBox = document.getElementById('account');
+			var accountBox = document.getElementById('loginName');
 			var passwordBox = document.getElementById('password');
 			document.getElementById("login-btn").addEventListener('tap', function() {
 				//mui.toast('欢迎体验Hello MUI');
 				//app.login();
 
 				var loginInfo = {
-					account: accountBox.value,
+					loginName: accountBox.value,
 					password: passwordBox.value
 				};
 				app.login(loginInfo, function(msg) {
