--- a/school/scShowAll.html
+++ b/school/scShowAll.html
@@ -203,7 +203,7 @@
 									if(data.code==0){												
 										var ul = self.element.querySelector('.mui-table-view');
 										ul.innerHTML="";
-										ul.insertBefore(createFragment(actFine,ul, data.objectList), ul.firstChild);
+										ul.insertBefore(createFragment(actFine,ul, data.object.rows), ul.firstChild);
 									 	 pageIndex=1;
 									}else{
 										mui.toast(data.msg);
@@ -225,7 +225,7 @@
 								app.getShowAll(userInfo,actFine,5,pageIndex+1,function(data){
 									if(data.code==0){												
 										var ul = self.element.querySelector('.mui-table-view'); 
-										ul.appendChild(createFragment(actFine,ul, data.objectList), ul.firstChild);
+										ul.appendChild(createFragment(actFine,ul, data.object.rows), ul.firstChild);
 									 	 pageIndex++;
 									}else{
 										mui.toast(data.msg);
@@ -244,6 +244,7 @@
 				var length = ul.querySelectorAll('li').length;
 				var fragment = document.createDocumentFragment();
 				var li;
+				objectList=objectList==undefined?[]:objectList;
 				for (var i = 0; i < objectList.length; i++) {
 					li = document.createElement('li');
 					li.className = 'mui-table-view-cell';
@@ -316,6 +317,7 @@
 				backButtonPress++;
 				if (backButtonPress > 1) {
 					plus.runtime.quit();
+					app.logout();
 				} else {
 					plus.nativeUI.toast('再按一次退出应用');
 				}
