--- a/school/setTeacherfo.html
+++ b/school/setTeacherfo.html
@@ -24,7 +24,7 @@
 	<div class="mui-content">
 		<form class="mui-input-group">
 			<div class="head-div">
-				<img src="../images/school/head-pic.png" class="head-pic">
+				<img src="../images/school/head-pic.png" class="head-pic" id="headImage">
 				<p style="font-size: 12px !important;margin-bottom: 12px;opacity: .5;">点击图片，上传新头像。</p>
 			</div>
 
@@ -67,6 +67,11 @@
 
   		});
   	})(mui,document);
+  	
+  	document.getElementById('headImage').addEventListener('tap', function() { 
+     	cameraAndAlbum('修改用户头像',1);
+     });
+  	
 </script>
 </body>
 </html>
