--- a/school/studentCenter.html
+++ b/school/studentCenter.html
@@ -3,68 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title>学生个人中心</title>
+    <title>修改学生信息</title>
+    <script src="../js/jquery-2.1.4.min.js"></script>
     <script src="../js/mui.min.js"></script>
     <link href="../css/mui.css" rel="stylesheet"/>
-    <link href="../css/school/courseAll.css" rel="stylesheet"/>
-  	<link href="../css/foot.css" rel="stylesheet"/>
-	<link href="../css/school/studentCenter.css" rel="stylesheet"/>
+	<link href="../css/app.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="../css/mui.picker.min.css" />
+    <link rel="stylesheet" href="../css/mui.poppicker.css" />
+	<link href="../css/dashboard.css" rel="stylesheet"/>
+	<link href="../css/top.css" rel="stylesheet"/>
+	<link href="../css/school/setMsgInfo.css" rel="stylesheet"/>
 </head>
 <body>
-	<header class="mui-bar mui-bar-nav" style="height: 260px;
-    background: url(../images/school/psct_top.png);background-size: cover">
-		<a class="mui-icon mui-icon-compose mui-pull-right"></a>
-		<img src="../images/school/head-btm.png" class="head-pic-btm">
-		<img src="../images/school/ct-dianzhui.png" class="dz-icon">
-
-
-
-		<img src="../images/school/head-pic.png" class="head-pic">
-		<p class="user-name">多仔</p>
-		<p class="class-name">一年级1班</p>
-		<p class="school-name">学多多开放学校</p>
-
+	<header class="mui-bar mui-bar-nav">
+		<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+		<a class="mui-pull-right setPwd" > 修改密码 </a>
+		<img src="../images/head-dz.png" class="head-dz"/>
+		<h1 class="mui-title">修改学生信息</h1>
 	</header>
-	<nav class="mui-bar mui-bar-tab">
-		<a class="mui-tab-item" href="#tabbar">
-			<span class="mui-icon tabbar-ns-1 foot-icon"></span>
-			<span class="mui-tab-label">课程</span>
-		</a>
-		<a class="mui-tab-item" href="#tabbar-with-chat">
-			<span class="mui-icon tabbar-ns-2 foot-icon"></span>
-			<span class="mui-tab-label">活动</span>
-		</a>
-		<a class="mui-tab-item" href="#tabbar-with-contact">
-			<span class="mui-icon tabbar-ns-3 foot-icon"></span>
-			<span class="mui-tab-label">成果</span>
-		</a>
-		<a class="mui-tab-item mui-active" href="#tabbar-with-map">
-			<span class="mui-icon tabbar-ns-4 foot-icon"></span>
-			<span class="mui-tab-label">我的</span>
-		</a>
-	</nav>
-	<div class="mui-content1">
+	<div class="mui-content">
+		<form class="mui-input-group">
+			<div class="head-div">
+				<img src="../images/school/head-pic.png" class="head-pic" id="headImage">
+				<p style="font-size: 12px !important;margin-bottom: 12px;opacity: .5;">点击图片，上传新头像。</p>
+			</div>
 
-		<div class="myh5_card">
-			<a href="#" class="top psct_purple">
-				<img src="../images/school/btm-round.png" class="photo">
-				<img src="../images/school/foot-icon.png" class="photo1" />
-				<p class="title">成长足迹</p>
-			</a>
+
+			<div class="mui-input-row">
+				<label>学生姓名 <span style="color:red;"> *</span></label>
+				<input type="text" placeholder="学生姓名"/>
+			</div>
+
+
+			<div class="mui-input-row">
+				<label>性别 <span style="color:red;"> *</span></label>
+				<input type="text" placeholder="性别"/>
+			</div>
+
+			<div class="mui-input-row">
+				<label>年级 <span style="color:red;"> *</span></label>
+				<input type="text" placeholder="年级"/>
+			</div>
+			<div class="mui-input-row">
+				<label>班级 <span style="color:red;"> *</span></label>
+				<input type="text" placeholder="班级"/>
+			</div>
+
+			<div class="mui-input-row">
+				<label>详细地址 <span style="color:red;"> *</span></label>
+				<input type="text" placeholder="详细地址"/>
+			</div>
+
+
+		</form>
+		<div style="padding:32px;background-color:#F7F7F7;">
+			<button  type="button" class="mui-btn mui-btn-primary mui-btn-block besttone-full-btn">确定</button>
 		</div>
-
-		<div class="myh5_card">
-			<a href="#" class="top psct_purple">
-				<img src="../images/school/btm-round.png" class="photo">
-				<img src="../images/school/honor-icon.png" class="photo1" />
-				<p class="title">我的荣誉</p>
-			</a>
-		</div>
-
 	</div>
-	
+<script type="text/javascript" src="../js/mui.picker.js" ></script>
+<script type="text/javascript" src="../js/mui.poppicker.js" ></script>
+<script type="text/javascript" src="../js/common.js" ></script>
 <script type="text/javascript" charset="UTF-8">
-  	mui.init();
+
+  	(function($,doc){
+  		$.init();
+  		$.ready(function(){
+
+  		});
+  	})(mui,document);
+  	
+  	 document.getElementById('headImage').addEventListener('tap', function() { 
+     	cameraAndAlbum('修改用户头像',1);
+     }); 
+  	
+  	
+  	
 </script>
 </body>
 </html>
