--- a/school/setStudentInfo.html
+++ b/school/setStudentInfo.html
@@ -24,7 +24,7 @@
 	<div class="mui-content">
 		<form class="mui-input-group">
 			<div class="head-div">
-				<img src="../images/school/head-pic.png" class="head-pic">
+				<img src="../images/school/head-pic.png" class="head-pic" id="headImage">
 				<p style="font-size: 12px !important;margin-bottom: 12px;opacity: .5;">点击图片，上传新头像。</p>
 			</div>
 
@@ -62,6 +62,7 @@
 	</div>
 <script type="text/javascript" src="../js/mui.picker.js" ></script>
 <script type="text/javascript" src="../js/mui.poppicker.js" ></script>
+<script type="text/javascript" src="../js/common.js" ></script>
 <script type="text/javascript" charset="UTF-8">
 
   	(function($,doc){
@@ -70,6 +71,13 @@
 
   		});
   	})(mui,document);
+  	
+  	 document.getElementById('headImage').addEventListener('tap', function() { 
+     	cameraAndAlbum('修改用户头像',1);
+     }); 
+  	
+  	
+  	
 </script>
 </body>
 </html>
