--- a/login.html
+++ b/login.html
@@ -44,11 +44,11 @@
 			<div class="mui-input-group">
 				<div class="mui-input-row" id="account-wrapper">
 					<span class="mui-icon mui-icon-locked"></span>
-					<input type="text" id="loginName" placeholder="请输入用户帐号" />
+					<input type="text" id="loginName" placeholder="请输入用户帐号" value="test200" />
 				</div>
 				<div class="mui-input-row">
 					<span class="mui-icon-extra mui-icon-extra-people"></span>
-					<input type="password" id="password" class="mui-input-password password" placeholder="请输入用户密码" />
+					<input type="password" id="password" class="mui-input-password password" placeholder="请输入用户密码" value="123456" />
 				</div>
 				<div class="button-group">
 					<div>
